including reference to be consistent with medium post

--- a/nlp/published_notebooks/Building Blocks Text Pre-Processing.ipynb
+++ b/nlp/published_notebooks/Building Blocks Text Pre-Processing.ipynb
@@ -11,6 +11,12 @@
     "In the last article of our series, we introduced the concept of Natural Language Processing, you can read it here, and now you probably want to try it yourself, right? Great! Without further ado, let's dive in to the building blocks for statistical natural language processing. \n",
     "\n",
     "In this article, we'll introduce the key concepts, along with practical implementation in Python and the challenges to keep in mind at the time of application.\n",
+    "\n",
+    "**References:**\n",
+    "- A General Approach to Preprocessing Text Data — KDnuggets. https://www.kdnuggets.com/2017/12/general-approach-preprocessing-text-data.html\n",
+    "- Tokenization — Stanford NLP Group. https://nlp.stanford.edu/IR-book/html/htmledition/tokenization-1.html\n",
+    "- Text Mining in Bovine Diseases — ijcaonline.org. https://www.ijcaonline.org/volume6/number10/pxc3871454.pdf\n",
+    "- Stemming and lemmatization — Stanford NLP Group. https://nlp.stanford.edu/IR-book/html/htmledition/stemming-and-lemmatization-1.html\n",
     "** **"
    ]
   },
@@ -277,6 +283,11 @@
   }
  ],
  "metadata": {
+  "environment": {
+   "name": "common-cpu.m49",
+   "type": "gcloud",
+   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m49"
+  },
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
@@ -292,9 +303,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
