restructure and refactor the code for: Evaluate Topic Modeling

--- a/natural_language_processing/topic_modeling/notebooks/Introduction to Topic Modeling.ipynb
+++ b/natural_language_processing/topic_modeling/notebooks/Introduction to Topic Modeling.ipynb
@@ -38,6 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "** **\n",
     "### LDA Implementation\n",
     "\n",
     "1. [Loading data](#load_data)\n",
@@ -52,8 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Loading data\n",
-    "\n",
+    "** **\n",
     "For this tutorial, we’ll use the dataset of papers published in NeurIPS (NIPS) conference which is one of the most prestigious yearly events in the machine learning community. The CSV data file contains information on the different NeurIPS papers that were published from 1987 until 2016 (29 years!). These papers discuss a wide variety of topics in machine learning, from neural networks to optimization methods, and many more.\n",
     "\n",
     "<img src=\"https://s3.amazonaws.com/assets.datacamp.com/production/project_158/img/nips_logo.png\" alt=\"The logo of NIPS (Neural Information Processing Systems)\">\n",
@@ -736,7 +736,7 @@
     "In the next article, we’ll go one step deeper into understanding how you can evaluate the performance of topic models, tune its hyper-parameters to get more intuitive and reliable results.\n",
     "\n",
     "** **\n",
-    "#### Ref:\n",
+    "#### References:\n",
     "1. Topic model — Wikipedia. https://en.wikipedia.org/wiki/Topic_model\n",
     "2. Distributed Strategies for Topic Modeling. https://www.ideals.illinois.edu/bitstream/handle/2142/46405/ParallelTopicModels.pdf?sequence=2&isAllowed=y\n",
     "3. Topic Mapping — Software — Resources — Amaral Lab. https://amaral.northwestern.edu/resources/software/topic-mapping\n",
