refactor text preprocessing notebooks

--- a/natural-language-processing/text-processing/Building Blocks Text Pre-Processing.ipynb
+++ b/natural-language-processing/text-processing/Building Blocks Text Pre-Processing.ipynb
@@ -52,24 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Following is the list of sentences tokenized from the sample review\n",
-      "\n",
-      "['The first time I ate here I honestly was not that impressed.', 'I decided to wait a bit and give it another chance.', 'I have recently eaten there a couple of times and although I am not convinced that the pricing is particularly on point the two mushroom and \\nswiss burgers I had were honestly very good.', 'The shakes were also tasty.', 'Although Mad Mikes is still my favorite burger around, \\nyou can do a heck of a lot worse than Smashburger if you get a craving']\n",
-      "---------------------------------------------------------\n",
-      "\n",
-      "Following is the list of words tokenized from the sample review sentence\n",
-      "\n",
-      "['I', 'decided', 'to', 'wait', 'a', 'bit', 'and', 'give', 'it', 'another', 'chance', '.']\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('wordnet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "\n",
@@ -108,30 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "179 stop words\n",
-      "\n",
-      "Original Text:\n",
-      "------------------\n",
-      "\n",
-      "The first time I ate here I honestly was not that impressed. I decided to wait a bit and give it another chance. \n",
-      "I have recently eaten there a couple of times and although I am not convinced that the pricing is particularly on point the two mushroom and \n",
-      "swiss burgers I had were honestly very good. The shakes were also tasty. Although Mad Mikes is still my favorite burger around, \n",
-      "you can do a heck of a lot worse than Smashburger if you get a craving\n",
-      "\n",
-      " Filtered Text:\n",
-      "------------------\n",
-      "\n",
-      "The first time I ate I honestly impressed . I decided wait bit give another chance . I recently eaten couple times although I convinced pricing particularly point two mushroom swiss burgers I honestly good . The shakes also tasty . Although Mad Mikes still favorite burger around , heck lot worse Smashburger get craving\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
@@ -169,34 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Original Text:\n",
-      "------------------\n",
-      "\n",
-      "The first time I ate here I honestly was not that impressed. I decided to wait a bit and give it another chance. \n",
-      "I have recently eaten there a couple of times and although I am not convinced that the pricing is particularly on point the two mushroom and \n",
-      "swiss burgers I had were honestly very good. The shakes were also tasty. Although Mad Mikes is still my favorite burger around, \n",
-      "you can do a heck of a lot worse than Smashburger if you get a craving\n",
-      "\n",
-      "Filtered Text: Stemming\n",
-      "------------------\n",
-      "\n",
-      "the first time I ate here I honestli wa not that impress . I decid to wait a bit and give it anoth chanc . I have recent eaten there a coupl of time and although I am not convinc that the price is particularli on point the two mushroom and swiss burger I had were honestli veri good . the shake were also tasti . although mad mike is still my favorit burger around , you can do a heck of a lot wors than smashburg if you get a crave\n",
-      "\n",
-      "Filtered Text: Lemmatization\n",
-      "--------------------------------\n",
-      "\n",
-      "The first time I ate here I honestly wa not that impressed . I decided to wait a bit and give it another chance . I have recently eaten there a couple of time and although I am not convinced that the pricing is particularly on point the two mushroom and swiss burger I had were honestly very good . The shake were also tasty . Although Mad Mikes is still my favorite burger around , you can do a heck of a lot worse than Smashburger if you get a craving\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.stem import PorterStemmer\n",
     "from nltk.stem import WordNetLemmatizer\n",
@@ -240,23 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "oper\n",
-      "oper\n",
-      "oper\n",
-      "oper\n",
-      "oper\n",
-      "oper\n",
-      "oper\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.stem import PorterStemmer\n",
     "words = [\"operate\", \"operating\", \"operates\", \"operation\", \"operative\", \"operatives\", \"operational\"]\n",
@@ -289,21 +227,21 @@
    "uri": "gcr.io/deeplearning-platform-release/base-cpu:m49"
   },
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
